# Imagine-plus

./: .gitignore  CLAUDE.md  README.md  dev-app-update.yml  index.html  jest.config.js  package-lock.json  package.json  scheme.json
.github/workflows/: build.yml  ci.yml  release.yml
modules/: bootstrap.ts
modules/__tests__/__stubs__/: tauri-api.ts
modules/__tests__/_tools/: before-test.ts
modules/__tests__/optimizers/: mozjpeg.test.ts  pngquant.test.ts  webp.test.ts
modules/__tests__/renderer/: job-runner.test.ts  store.test.ts
modules/backend/: app.ts  heic.ts  menu.ts  optimize.ts
modules/bridge/: interface.ts  preload.ts  tauri.ts  web.ts  webview-decode.ts
modules/common/: file-utils.ts  types.ts
modules/dev/: dev.ts
modules/locales/: ar.ts  de.ts  en.ts  es.ts  fa.ts  fr.ts  hr.ts  it.ts  nl.ts  pl.ts  ru.ts  sr.ts  sv.ts  zh-CN.ts
modules/optimizers/: index.ts
modules/renderer/: App.tsx  index.ts
modules/renderer/components/: Collapse.less  ImageOptions.tsx  ImageViewer.less  ImageViewer.tsx  Messager.less  Modal.less  Modal.tsx  Popper.less  RadioGroup.less  Ranger.less  Select.less  TargetTypeSelect.less  TargetTypeSelect.tsx  TaskView.less  TaskView.tsx  Tooltip.less  Tooltip.tsx  WindowControls.less  WindowControls.tsx
modules/renderer/containers/: ActionBar.less  ActionBar.tsx  Alone.tsx  OptionsPanel.less  OptionsPanel.tsx  ResizePanel.less  ResizePanel.tsx  Settings.less  Settings.tsx
modules/renderer/images/symbols/: index.ts
modules/renderer/store/: actionCreaters.ts  actions.ts  job-runner.ts  reducer.ts  storage.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codecs.rs  commands.rs  config_store.rs  files.rs  lib.rs  main.rs  menu.rs  metadata.rs  native_decode.rs  pipeline.rs  types.rs
typings/: libheif-js.d.ts
